# WBER_NEW

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py
app/db/: __init__.py  config.py  crud.py  models.py  session.py
app/routes/: __init__.py  auth.py  cities.py  events.py  models.py  users.py  weather.py
app/static/: script_main.js  script_reg.js  script_set.js  style.css  styleOther.css  styleSett.css
app/templates/: login.html  main.html  registration.html  settings.html
